debathena-reactivate (2.0.2) unstable; urgency=low

  * Clean up the CUPS remote queue cache on logout and package upgrades.

 -- Evan Broder <broder@mit.edu>  Mon, 23 Nov 2009 13:57:35 -0500

debathena-reactivate (2.0.1) unstable; urgency=low

  * Various bugfixes:
    - Preserve the KRBTKFILE and KRB5CCNAME variables when running
      schroot. (Trac: #441)
    - Run root commands in /, not $HOME.

 -- Evan Broder <broder@mit.edu>  Tue, 17 Nov 2009 18:12:45 -0500

debathena-reactivate (2.0) unstable; urgency=low

  * Rewrite to use schroot 1.3 and aufs union mounts instead of LVM.
    This makes logins on a Dell 760 take about 8 seconds to reach the
    desktop.

 -- Geoffrey Thomas <geofft@mit.edu>  Sun, 08 Nov 2009 16:36:48 -0500

debathena-reactivate (1.25.6) unstable; urgency=low

  * Fix init script metadata (overlooked in 1.21).

 -- Geoffrey Thomas <geofft@mit.edu>  Fri, 16 Oct 2009 23:57:22 -0400

debathena-reactivate (1.25.5) unstable; urgency=low

  * geofft's transformation of /etc/pam.d/su was running outside the
    chroot, and editing the file in place, thus clobbering the symlink. We
    need to fix all of this in the postinst.

 -- Evan Broder <broder@mit.edu>  Wed, 14 Oct 2009 14:47:45 -0400

debathena-reactivate (1.25.4) unstable; urgency=low

  * Always lecture users trying to sudo on quickstations.
  * Stop editing /etc/pam.d/sudo in the snapshot setup, since we're no
    longer diverting it.

 -- Evan Broder <broder@mit.edu>  Wed, 14 Oct 2009 13:52:32 -0400

debathena-reactivate (1.25.3) unstable; urgency=low

  * Specify both of the lecture files in /etc/sudoers: error for
    everybody, and warning for the admin group. The latter overrides the
    former.

 -- Evan Broder <broder@mit.edu>  Wed, 14 Oct 2009 12:39:11 -0400

debathena-reactivate (1.25.2) unstable; urgency=low

  [ Evan Broder ]
  * Use PAM instead of the sudo lecture_file to lecture users.

  [ Geoffrey Thomas ]
  * Do that only outside the cluster login session, and preserve